# cmaketemplate

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  run.sh
Modules/Renderer/: draw.cpp  draw.hpp
Resources/: config.ini
Source/: main.cpp
